Changes for fix layout on IE7

--- a/phprojekt/htdocs/css/themes/phprojekt/Common.css
+++ b/phprojekt/htdocs/css/themes/phprojekt/Common.css
@@ -57,7 +57,7 @@
 
 .phprojekt #header #search-bar input {
     background: url(images/searchfield_bg.png);
-    width: 85px;
+    width: 80px;
     border: none;
     height: 16px;
     font-size: 9px;
@@ -73,8 +73,9 @@
     line-height: normal;
     text-align: start;
     vertical-align: baseline;
-    margin-top: 5px;
+    margin-top: 2px;
     margin-right: 10px;
+    margin-left: 20px;
 }
 
 .phprojekt #header #toolbar {
@@ -325,7 +326,7 @@ h1,h2,h3,h4,h5,h6 {
     vertical-align: baseline;
     margin-top: 50px;
     margin-right: 0px;
-    background-color: #ccc;
+    background-color: #294064;    
     position: absolute;
     border: 1px solid black;
     right: 0px;
@@ -342,9 +343,9 @@ h1,h2,h3,h4,h5,h6 {
     font-weight: 600;
     font-style: normal;
     overflow:hidden !important;
-    background-color: #294064;
     padding-bottom: 2px;
     padding-top: 2px;
+    width: auto;
 }
 
 .phprojekt .searchsuggesttitle a {
@@ -358,15 +359,21 @@ h1,h2,h3,h4,h5,h6 {
 
 .phprojekt #searchsuggest .results {
     background-color: #ccc;
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
 .phprojekt #searchsuggest .results a {
     color: #000;
     font-weight: bold;
+    margin-left: 10px;
+    margin-right: 10px;    
 }
 
 .phprojekt #searchsuggest .results span {
     color: #000;
+    margin-left: 10px;
+    margin-right: 10px;   
 }
 
 .phprojekt .greyContainer {
